[package]
name = "epidemic-sound-assignment"
version = "0.1.0"
authors = ["Zenios Zeniou <mrzenioszeniou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket     = "0.4.7"
rand       = "0.8.3"
serde      = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
